Mejora de la pag de Dasomnya
Agregado contador para la pagina uwu

--- a/kyatsu/public/css/dasomnya.css
+++ b/kyatsu/public/css/dasomnya.css
@@ -61,3 +61,275 @@
     transform: translateY(-75%);
   }
 }/*# sourceMappingURL=dasomnya.css.map */
+
+.oñatitle{
+  margin-top: 20px;
+  font-size: xx-large;
+  font-family: sans-serif;
+  padding-top: 40px;
+}
+  body{
+    margin: 0;
+    margin-top: -20px;
+    margin-bottom: -20px;
+    padding:-5px;
+  }
+  :root {
+  --card-height: 400px;
+  --card-width: calc(var(--card-height) / 1.5);
+}
+* {
+  box-sizing: border-box;
+}
+.volver{
+  background-color: white;
+  top: 20%;
+  right: 10%;
+  bottom: 50%;
+  position: -webkit-sticky;
+  position: sticky;
+  border-radius: 0%;
+  width: 60px;
+  height: 60px;
+}
+.c-c{
+  margin: 0px;
+  margin-top: -20px;
+  background-color: #191c29;
+}
+.cards-container{
+  width: 100vw;
+  height: 100vh;
+  margin: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: #191c29;
+}
+  .card {
+  width: var(--card-width);
+  height: var(--card-height);
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: flex-end;
+  padding: 0 36px;
+  perspective: 2500px;
+  margin: 0 50px;
+}
+
+.cover-image {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.wrapper {
+  transition: all 0.5s;
+  position: absolute;
+  width: 100%;
+  z-index: -1;
+}
+
+.card:hover .wrapper {
+  transform: perspective(900px) translateY(-5%) rotateX(25deg) translateZ(0);
+  box-shadow: 2px 35px 32px -8px rgba(0, 0, 0, 0.75);
+  -webkit-box-shadow: 2px 35px 32px -8px rgba(0, 0, 0, 0.75);
+  -moz-box-shadow: 2px 35px 32px -8px rgba(0, 0, 0, 0.75);
+}
+
+.wrapper::before,
+.wrapper::after {
+  content: "";
+  opacity: 0;
+  width: 100%;
+  height: 80px;
+  transition: all 0.5s;
+  position: absolute;
+  left: 0;
+}
+.wrapper::before {
+  top: 0;
+  height: 100%;
+  background-image: linear-gradient(
+    to top,
+    transparent 46%,
+    rgba(12, 13, 19, 0.5) 68%,
+    rgba(12, 13, 19) 97%
+  );
+}
+.wrapper::after {
+  bottom: 0;
+  opacity: 1;
+  background-image: linear-gradient(
+    to bottom,
+    transparent 46%,
+    rgba(12, 13, 19, 0.5) 68%,
+    rgba(12, 13, 19) 97%
+  );
+}
+
+.card:hover .wrapper::before,
+.wrapper::after {
+  opacity: 1;
+}
+
+.card:hover .wrapper::after {
+  height: 120px;
+}
+.title {
+  width: 100%;
+  transition: transform 0.5s;
+}
+.card:hover .title {
+  transform: translate3d(0%, -50px, 100px);
+}
+
+.character {
+  width: 80%;
+  opacity: 0;
+  transition: all 0.5s;
+  position: absolute;
+  z-index: -1;
+}
+.character-2 {
+  width: 80%;
+  opacity: 0;
+  transition: all 1s;
+  position: absolute;
+  z-index: -1;
+}
+.character-3 {
+  width: 80%;
+  opacity: 0;
+  transition: all 1.5s;
+  position: absolute;
+  z-index: -1;
+}
+
+.card:hover .character {
+  opacity: 1;
+  transform: translate3d(0%, -30%, 100px);
+}
+.card:hover .character-2 {
+  opacity: 1;
+  transform: translate3d(20%, -30%, 100px);
+}
+.card:hover .character-3 {
+  opacity: 1;
+  transform: translate3d(-20%, -30%, 100px);
+}
+
+
+
+
+@-webkit-keyframes animation {
+  from {
+    opacity: 0;
+    -webkit-transform: scale(1.2) rotateX(45deg);
+    transform: scale(1.2) rotateX(45deg);
+  }
+  to {
+  }
+}
+
+@-webkit-keyframes animation2 {
+  from {
+    opacity: 0;
+    -webkit-transform: scale(1.2) rotateX(45deg);
+    transform: scale(1.2) rotateX(45deg);
+  }
+  to {
+  }
+}
+
+.slider div p {
+  color: #1c1c1c;
+  position: absolute;
+  bottom: -65px;
+  font-family: font;
+  font-size: 22px;
+}
+.slider {
+  -webkit-animation: animation ease 1s;
+  animation-delay: 0.8s;
+  animation-fill-mode: backwards;
+
+  margin: 60px auto 0 auto;
+  height: 360px;
+  width: 240px;
+  padding: 40px;
+  top: 100px;
+
+  perspective: 1000px;
+  transition: ease-in-out 0.2s;
+  /*-webkit-transform:rotateX(45deg);
+             -webkit-transform-style:preserve-3d;
+                 position:absolute;*/
+}
+/*.slider:active{ -webkit-transform:rotateZ(10deg);}*/
+
+.slide img {
+  text-align: center;
+  width: 100%;
+  height: 100%;
+  -webkit-user-drag: none;
+  user-drag: none;
+  -moz-user-drag: none;
+  border-radius: 2px;
+}
+
+.slide {
+  -webkit-user-select: none;
+  user-select: none;
+  -moz-user-select: none;
+  position: absolute;
+  height: 280px;
+  width: 240px;
+
+  box-shadow: 0px 10px 30px 0px rgba(0, 0, 0, 0.3);
+  background: #fcfcfc;
+  -webkit-transform-style: preserve-3d;
+  transform-style: preserve-3d;
+  -moz-transform-style: preserve-3d;
+  text-align: center;
+  /*overflow:hidden;*/
+  border: 12px white solid;
+  box-sizing: border-box;
+  border-bottom: 55px white solid;
+  border-radius: 5px;
+}
+.transition {
+  -webkit-transition: cubic-bezier(0, 1.95, 0.49, 0.73) 0.4s;
+  -moz-transition: cubic-bezier(0, 1.95, 0.49, 0.73) 0.4s;
+  transition: cubic-bezier(0, 1.95, 0.49, 0.73) 0.4s;
+}
+section{
+  height: 100vh;
+  width: 100vw;
+  max-height: 1080px;
+  max-width: 1920px;
+  align-items: center;
+  justify-content: center;
+  flex-flow: column;
+  margin: auto;
+  display: -webkit-flex;
+  display: -moz-flex;
+  display: -ms-flex;
+  display: -o-flex;
+}
+
+.timer{
+  font-family: "Verdana";
+  background-image: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1)), url(../img/bg_timer.jpg);
+  /* Set a specific height */
+  height: 100vh;
+  max-height: 1080px;
+  width: 100vw;
+  max-width: 1920px;
+  /* Position and center the image to scale nicely on all screens */
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative;
+}
