--- a/kyatsu/public/css/foro.css
+++ b/kyatsu/public/css/foro.css
@@ -15,11 +15,20 @@ div.welcome{
   max-width: 8em;
 }
 
+div.user-name a{
+    text-decoration: none;
+    color: black;
+}
 
 .post-content {
     width: inherit;
     padding: 1em;
 }
+.post-content a {
+    text-decoration: none;
+    color: black;
+}
+
 
 .post-date p{
     font-size: smaller;
