--- a/kyatsu/public/css/gameinfo.css
+++ b/kyatsu/public/css/gameinfo.css
@@ -62,6 +62,10 @@ h3{
 .quees {
     /* Use "linear-gradient" to add a darken background effect to the image (photographer.jpg). This will make the text easier to read */
     background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url(../img/bg_quees.png);
+}
+
+.base {
+    background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url(../img/bg_bases.png);
 
 }
 
